feat: acces fichier des publications
